@@ -35,8 +35,6 @@ from libqtile.widget import Systray, base
 if TYPE_CHECKING:
     from typing import Any  # noqa: F401
 
-    from libqtile.utils import ColorsType
-
 
 class _Decoration(base.PaddingMixin):
     """
@@ -53,11 +51,13 @@ class _Decoration(base.PaddingMixin):
         base.PaddingMixin.__init__(self, **config)
         self.add_defaults(_Decoration.defaults)
         self._extrawidth = self.extrawidth
+        self._ctx: Context | None = None
 
     def __eq__(self, other):
         return type(self) is type(other) and self._user_config == other._user_config
 
     def _configure(self, parent: base._Widget) -> None:
+        self._ctx = None
         self.parent = parent
 
     def single_or_four(self, value, name: str):
@@ -98,7 +98,20 @@ class _Decoration(base.PaddingMixin):
 
     @property
     def ctx(self) -> Context:
-        return self.drawer.ctx
+        if self._ctx:
+            return self._ctx
+
+        if self.parent.qtile.core.name == "x11":
+            # We need to erase some of the background but the x11 drawer
+            # painted the background directly to the XCB surface so we've got
+            # to erase content from that surface
+            ctx = Context(self.drawer._xcb_surface)  # type: ignore
+        else:
+            ctx = Context(self.drawer.surface)
+
+        self._ctx = ctx
+
+        return self._ctx
 
     def set_source_rgb(self, colour) -> None:
         self.drawer.set_source_rgb(colour, ctx=self.ctx)
@@ -400,10 +413,7 @@ class RectDecoration(_Decoration, GroupMixin):
 
             ctx.close_path()
 
-    def draw(self, clear: bool = False, colour: ColorsType | None = None) -> None:
-        if clear:
-            self.parent._pre_clear(colour)
-
+    def draw(self) -> None:
         # The widget may have resized itsef so we should reset any existing clip area
         self.drawer.ctx.reset_clip()
 
@@ -450,10 +460,7 @@ class BorderDecoration(_Decoration, GroupMixin):
         self.add_defaults(BorderDecoration.defaults)
         self.borders = self.single_or_four(self.border_width, "Border width")
 
-    def draw(self, clear: bool = False, colour: ColorsType | None = None) -> None:
-        if clear:
-            self.parent._pre_clear(colour)
-
+    def draw(self) -> None:
         top, right, bottom, left = self.borders
 
         self.set_source_rgb(self.colour)
@@ -682,7 +689,19 @@ class PowerLineDecoration(_Decoration):
         except (ValueError, IndexError, StopIteration):
             return self.parent.bar.background
 
-    def paint_background(self, background, foreground):
+    def paint_background(self, background):
+        # Clear the old content
+        self.ctx.save()
+        self.ctx.set_operator(cairocffi.OPERATOR_CLEAR)
+        self.ctx.rectangle(
+            self.parent_length - self.shift + self.extrawidth,
+            0,
+            self.size,
+            self.parent.bar.height,
+        )
+        self.ctx.fill()
+        self.ctx.restore()
+
         # Paint the new background
         self.ctx.save()
 
@@ -691,63 +710,47 @@ class PowerLineDecoration(_Decoration):
             self.ctx.set_operator(cairocffi.OPERATOR_SOURCE)
             self.set_source_rgb(self.parent.bar.background)
             self.ctx.rectangle(
+                self.parent_length - self.shift + self.extrawidth,
                 0,
-                0,
-                self.parent.length,
+                self.size,
                 self.parent.bar.height,
             )
             self.ctx.fill()
 
-            # We need to clear the part that will have the new background
-            self.ctx.rectangle(
-                0,
-                self.padding_y,
-                self.parent.length,
-                self.parent.bar.height - 2 * self.padding_y,
-            )
-            self.ctx.set_operator(cairocffi.OPERATOR_CLEAR)
-            self.ctx.fill()
-
-        self.ctx.set_operator(cairocffi.OPERATOR_SOURCE)
-
+        # Create a rectangle for the space
         self.ctx.rectangle(
-            0,
-            self.padding_y,
-            self.parent_length - self.shift,
-            self.parent.bar.height - 2 * self.padding_y,
-        )
-
-        self.set_source_rgb(background)
-        self.ctx.fill()
-
-        self.ctx.rectangle(
-            self.parent_length - self.shift,
+            self.parent_length - self.shift + self.extrawidth,
             self.padding_y,
             self.size,
             self.parent.bar.height - 2 * self.padding_y,
         )
 
-        self.set_source_rgb(foreground)
-        self.ctx.fill()
+        # If there's vertical padding then we've already painted the bar's background
+        # to this space so we need to clear the part that will have the new backgroun
+        if self.padding_y:
+            self.ctx.set_operator(cairocffi.OPERATOR_CLEAR)
+            self.ctx.fill
 
+        self.ctx.set_operator(cairocffi.OPERATOR_SOURCE)
+        self.set_source_rgb(background)
+        self.ctx.fill()
         self.ctx.restore()
 
     def draw_rounded(self, rotate=False):
         self.fg = self.parent_background if not rotate else self.next_background
         self.bg = self.next_background if not rotate else self.parent_background
 
-        self.paint_background(self.parent_background, self.bg)
+        self.paint_background(self.bg)
 
         self.ctx.save()
         self.ctx.set_operator(cairocffi.OPERATOR_SOURCE)
 
+        # Translate the surface so that the origin is in the middle of the arc
         start = (
             self.parent_length - self.shift + self.extrawidth
             if not rotate
             else self.parent.length
         )
-
-        # Translate the surface so that the origin is in the middle of the arc
         self.ctx.translate(start, self.parent.bar.height // 2)
 
         # Rotate 180 degrees if drawing curve in the other direction
@@ -776,7 +779,7 @@ class PowerLineDecoration(_Decoration):
         self.fg = self.parent_background
         self.bg = self.next_background
 
-        self.paint_background(self.fg, self.bg)
+        self.paint_background(self.bg)
 
         width = self.size
         height = self.parent.bar.height - 2 * (self.padding_y)
@@ -797,7 +800,7 @@ class PowerLineDecoration(_Decoration):
         self.ctx.fill()
         self.ctx.restore()
 
-    def draw(self, clear: bool = False, colour: ColorsType | None = None) -> None:
+    def draw(self):
         if self.width == 0:
             return
 
@@ -817,12 +820,10 @@ def inject_decorations(classdef):
         """Draw decorations after clearing background."""
         if self.use_bar_background:
             colour = self.bar.background
+        self.__clear(colour)
 
-        if not self.decorations:
-            self._pre_clear(colour)
-
-        for i, decoration in enumerate(self.decorations):
-            decoration.draw(clear=i == 0, colour=colour)
+        for decoration in self.decorations:
+            decoration.draw()
 
     def configure_decorations(self):
         if not hasattr(self, "use_bar_background"):
@@ -841,7 +842,7 @@ def inject_decorations(classdef):
             for dec in self.decorations:
                 dec._configure(self)
 
-            self._pre_clear = self.drawer.clear
+            self.__clear = self.drawer.clear
             self.drawer.clear = self.new_clear
 
     def new_configure(self, qtile, bar):
